@@ -56,7 +56,7 @@ pthread_spin_unlock (pthread_spinlock_t * lock)
     }
 
   switch ((long)
-	  PTW32_INTERLOCKED_COMPARE_EXCHANGE_LONG ((PTW32_INTERLOCKED_PTR) &s->interlock,
+	  PTW32_INTERLOCKED_COMPARE_EXCHANGE_LONG ((PTW32_INTERLOCKED_LONGPTR) &s->interlock,
 					      (PTW32_INTERLOCKED_LONG) PTW32_SPIN_UNLOCKED,
 					      (PTW32_INTERLOCKED_LONG) PTW32_SPIN_LOCKED))
     {
